openshift/cicd/tools/routers/ingress controller/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-test
  namespace: sit
  annotations:
    ingress.kubernetes.io/rewrite-target: "/"
    ingress.kubernetes.io/add-base-url: 'true'
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ecsd00100eed.epam.com
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 3000
      - path: /api
        backend:
          serviceName: backend
          servicePort: 8080
